--- a/H5页面.html
+++ b/H5页面.html
@@ -85,6 +85,7 @@
 		    font-size: 14px;
 		    color: #666;
 		    width: 100%;
+
 		}
         .activity-list {
             display: grid;
@@ -152,61 +153,61 @@
         <h2 class="section-title">常见应用</h2>
         <div class="app-nav">
             <div class="app-item">
-                <img src='img/精彩活动.png' alt="精彩活动">
+                <img src='精彩活动.png' alt="精彩活动">
                 <span>精彩活动</span>
             </div>
             <div class="app-item">
-                <img src='img/主题书单.png' alt="主题书单">
+                <img src='主题书单.png' alt="主题书单">
                 <span>主题书单</span>
             </div>
             <div class="app-item">
-                <img src='img/积分商城.png' alt="积分商城">
+                <img src='积分商城.png' alt="积分商城">
                 <span>积分商城</span>
             </div>
             <div class="app-item">
-                <img src='img/学习打卡.png' alt="学习打卡">
+                <img src='学习打卡.png' alt="学习打卡">
                 <span>学习打卡</span>
             </div>
             <div class="app-item">
-                <img src='img/文化慕课.png' alt="文化慕课">
+                <img src='文化慕课.png' alt="文化慕课">
                 <span>文化慕课</span>
             </div>
             <div class="app-item">
-                <img src='img/才艺视界.png' alt="才艺视界">
+                <img src='才艺视界.png' alt="才艺视界">
                 <span>才艺视界</span>
             </div>
             <div class="app-item">
-                <img src='img/学术资源.png' alt="学术资源">
+                <img src='学术资源.png' alt="学术资源">
                 <span>学术资源</span>
             </div>
             <div class="app-item">
-                <img src='img/经典朗读.png' alt="经典朗读">
+                <img src='经典朗读.png' alt="经典朗读">
                 <span>经典朗读</span>
             </div>
         </div>
         <h2 class="section-title">活动推荐</h2>
         <div class="activity-list">
             <div class="activity-card">
-                <img src='img/PIC00001.JPG' alt="端午答题闯关活动">
+                <img src='PIC00001.JPG' alt="端午答题闯关活动">
                 <p>党日活动1</p >
             </div>
             <div class="activity-card">
-                <img src='img/PIC00008.JPG' alt="我与图书馆的故事">
+                <img src='PIC00008.JPG' alt="我与图书馆的故事">
                 <p>党日活动2</p >
             </div>
         </div>
         <h2 class="section-title">精选照片</h2>
         <div class="book-list">
             <div class="book-card">
-                <img src='img/PIC00027.JPG' alt="红楼梦">
+                <img src='PIC00027.JPG' alt="红楼梦">
                 <span>1</span>
             </div>
             <div class="book-card">
-                <img src='img/PIC00221.JPG' alt="人工智能">
+                <img src='PIC00221.JPG' alt="人工智能">
                 <span>2</span>
             </div>
             <div class="book-card">
-                <img src='img/PIC00356.JPG' alt="人工智能">
+                <img src='PIC00356.JPG' alt="人工智能">
                 <span>3</span>
             </div>
         </div>
